@@ -1,4 +1,7 @@
- /* $Id: ChangeLog,v 1.723 2000-02-12 10:44:15 sandervl Exp $ */
+ /* $Id: ChangeLog,v 1.724 2000-02-12 11:52:22 davidr Exp $ */
+
+ 2000-02-12: David Raison <djr@lemur.co.uk>
+ 	- OLE32: Fixed IsEqualIID issue
 
  2000-02-11: Vit Timchishin <tvv@sbs.kiev.ua>
 	- KERNEL32: Fix for OpenFile; fill in OFSTRUCT even if api fails
